# digit-recognizer

./: buf.gen.yaml  makefile
nn/: pyproject.toml
nn/res/: dump_data.py
nn/res/test/0/: 0.pnm  1.pnm  10.pnm  11.pnm  12.pnm  13.pnm  14.pnm  15.pnm  16.pnm  17.pnm  18.pnm  19.pnm  2.pnm  20.pnm  21.pnm  22.pnm  23.pnm  24.pnm  25.pnm  26.pnm  27.pnm  28.pnm  29.pnm  3.pnm  30.pnm  31.pnm  32.pnm  33.pnm  34.pnm  35.pnm  36.pnm  37.pnm  38.pnm  39.pnm  4.pnm  40.pnm  41.pnm  5.pnm  6.pnm  7.pnm  (+2 more)
nn/res/test/1/: 0.pnm  1.pnm  10.pnm  11.pnm  12.pnm  13.pnm  14.pnm  15.pnm  16.pnm  17.pnm  18.pnm  19.pnm  2.pnm  20.pnm  21.pnm  22.pnm  23.pnm  24.pnm  25.pnm  26.pnm  27.pnm  28.pnm  29.pnm  3.pnm  30.pnm  31.pnm  32.pnm  33.pnm  34.pnm  35.pnm  36.pnm  37.pnm  38.pnm  39.pnm  4.pnm  40.pnm  41.pnm  42.pnm  43.pnm  44.pnm  (+29 more)
nn/res/test/2/: 0.pnm  1.pnm  10.pnm  11.pnm  12.pnm  13.pnm  14.pnm  15.pnm  16.pnm  17.pnm  18.pnm  19.pnm  2.pnm  20.pnm  21.pnm  22.pnm  23.pnm  24.pnm  25.pnm  26.pnm  27.pnm  28.pnm  29.pnm  3.pnm  30.pnm  31.pnm  32.pnm  33.pnm  34.pnm  35.pnm  36.pnm  37.pnm  38.pnm  39.pnm  4.pnm  40.pnm  41.pnm  42.pnm  43.pnm  44.pnm  (+16 more)
nn/res/test/3/: 0.pnm  1.pnm  10.pnm  11.pnm  12.pnm  13.pnm  14.pnm  15.pnm  16.pnm  17.pnm  18.pnm  19.pnm  2.pnm  20.pnm  21.pnm  22.pnm  23.pnm  24.pnm  25.pnm  26.pnm  27.pnm  28.pnm  29.pnm  3.pnm  30.pnm  31.pnm  32.pnm  33.pnm  34.pnm  35.pnm  36.pnm  37.pnm  38.pnm  39.pnm  4.pnm  (+13 more)
nn/src/nn/: params.py  testing.py  training.py
nn/src/proto/: communication_pb2.py  communication_pb2_grpc.py
nn/src/server/: main.py
(+829 files in other folders)
